<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:hint="@string/distancia"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/totaldequilometros"/>

    <EditText
        android:id="@+id/edit_Price"
        android:layout_width="match_parent"
        android:hint="@string/preco"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/precoporlitro"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:hint="@string/autonomia"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/kmporlitro"/>

    <TextView
        android:id="@+id/text_totalValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:text="@string/seugastototal"/>
    <TextView
        android:id="@+id/text_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="38sp"
        android:layout_marginTop="16sp"
        android:textColor="@color/blue"
        android:text="@string/valor_total"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:background="@color/blue2"
        android:padding="16dp"
        android:text="@string/calcular"
        android:textSize="20sp" />


</LinearLayout>